[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/character.gd" type="Script" id=1]
[ext_resource path="res://assets/controls/analog_stick.png" type="Texture" id=2]
[ext_resource path="res://assets/ninja/Kunai.png" type="Texture" id=3]
[ext_resource path="res://assets/controls/analog_stick_bg_1.png" type="Texture" id=4]
[ext_resource path="res://scripts/joystick.gd" type="Script" id=5]
[ext_resource path="res://music/race_sfx/shuriken.wav" type="AudioStream" id=6]
[ext_resource path="res://music/race_sfx/ninja_jump.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/ninja/spritesheet.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 68.0133, 127.99 )

[sub_resource type="Animation" id=2]

length = 1.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=3]

length = 0.9
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=4]

length = 0.9
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23, 24, 25, 26, 27, 28, 29 ]
}

[sub_resource type="Animation" id=5]

length = 0.45
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44, 45, 46, 47, 48, 49 ]
}

[sub_resource type="Animation" id=6]

resource_name = "shoot"
length = 0.9
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33, 34, 35, 36, 37, 38, 39 ]
}

[node name="Ninja" type="KinematicBody2D" index="0" groups=[
"player",
]]

position = Vector2( 21.7123, 15.0315 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Transform" ]
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Camera2D" type="Camera2D" parent="." index="0"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 3, 3 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="GUI" type="CanvasLayer" parent="Camera2D" index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Shot" type="TextureRect" parent="Camera2D/GUI" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 930.0
margin_top = 435.0
margin_right = 1080.0
margin_bottom = 585.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="Sprite" type="Sprite" parent="Camera2D/GUI/Shot" index="0"]

position = Vector2( 74.3999, 72.0535 )
rotation = 0.826559
scale = Vector2( 0.381523, 0.396528 )
texture = ExtResource( 3 )

[node name="Jump" type="TextureRect" parent="Camera2D/GUI" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 854.0
margin_top = 508.0
margin_right = 1004.0
margin_bottom = 658.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="HorControl" type="TextureRect" parent="Camera2D/GUI" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 366.0
margin_right = 235.0
margin_bottom = 597.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0
script = ExtResource( 5 )
_sections_unfolded = [ "Rect" ]

[node name="Joystick" type="TextureRect" parent="Camera2D/GUI/HorControl" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 42.0
margin_top = 41.0
margin_right = 192.0
margin_bottom = 191.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 19.9212, 16.9997 )
scale = Vector2( 1.36412, 1.18329 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="shuriken_sound" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 6 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="jump_sound" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 7 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="rope_sound" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 7 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Sprite" type="Sprite" parent="." index="5"]

scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 8 )
vframes = 5
hframes = 10
frame = 39
_sections_unfolded = [ "Animation", "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite" index="0"]

root_node = NodePath("..")
autoplay = "idle"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/idle = SubResource( 2 )
anims/jump = SubResource( 3 )
anims/rope = SubResource( 4 )
anims/run = SubResource( 5 )
anims/shoot = SubResource( 6 )
blend_times = [  ]


